# console-generator

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
commands/: make_command.cpp  make_command.h
src/: CMakeLists.txt  main.cpp
src/commands/: make_command.cpp  make_command.h
